--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
+.slider-photo {
+    position: relative;
+}
+
 .slider-photo img {
     width: 100%;
+}
+
+.box-dot {
+    background-color: rgba(0, 0, 0, .5);
+    border-radius: 20px;
+    padding: 15px;
+    position: absolute;
+    bottom: 24px;
+    left: 50%; /*TODO: da sistemare meglio*/
+}
+
+.box-dot i {
+    color: #fff;
+    margin-right: 10px;
+}
+
+.box-dot i:last-child {
+    margin-right: 0;
 }
