--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 .box-dot {
     background-color: rgba(0, 0, 0, .5);
     border-radius: 20px;
-    padding: 15px;
+    padding: 12px;
     position: absolute;
     bottom: 24px;
     left: 50%; /*TODO: da sistemare meglio*/
@@ -25,5 +25,5 @@
 }
 
 .box-dot .detected {
-    color: blue;
+    color: #488ac7;
 }
