--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,51 @@
-.slider-photo {
-    position: relative;
+header {
+    background-color: #488ac7;
+    height: 80px;
+    border-bottom-left-radius: 24px;
+    border-bottom-right-radius: 24px;
 }
 
-.slider-photo img {
+header h1 {
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+}
+
+.slider-photo {
+    position: relative;
+    background-color: #333;
+    border-radius: 24px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+
+.slider-photo-box img {
     width: 100%;
+    border-radius: 18px;
+    overflow: hidden;
+}
+
+.slider-photo-box {
+    height: 100%;
+
+}
+
+.arrow-box i {
+    font-size: 40px;
 }
 
 .box-dot {
     background-color: rgba(0, 0, 0, .5);
-    border-radius: 20px;
+    border-radius: 24px;
     padding: 12px;
     position: absolute;
+    transform: translate(-50%);
     bottom: 24px;
-    left: 50%; /*TODO: da sistemare meglio*/
+    left: 50%;
+    display: none;
+}
+
+.slider-photo-box:hover .box-dot{
+    display: block;
 }
 
 .box-dot i {
