--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ header h1 {
     border-radius: 24px;
     padding-top: 12px;
     padding-bottom: 12px;
+    margin-top: 20px;
 }
 
 .slider-photo-box img {
@@ -41,11 +42,6 @@ header h1 {
     transform: translate(-50%);
     bottom: 24px;
     left: 50%;
-    display: none;
-}
-
-.slider-photo-box:hover .box-dot{
-    display: block;
 }
 
 .box-dot i {
