--- a/css/style.css
+++ b/css/style.css
@@ -13,20 +13,20 @@ header h1 {
 .slider-photo {
     position: relative;
     background-color: #333;
-    border-radius: 24px;
+    border-radius: 12px;
     padding-top: 12px;
     padding-bottom: 12px;
     margin-top: 20px;
 }
 
-.slider-photo-box img {
-    width: 100%;
-    border-radius: 18px;
-    overflow: hidden;
+.slider-photo-inner {
+    height: calc(100vh - 200px);
 }
 
-.slider-photo-box {
+.slider-photo-inner img {
+    width: 100%;
     height: 100%;
+    object-fit: contain;
 
 }
 
@@ -34,6 +34,7 @@ header h1 {
     font-size: 40px;
 }
 
+/* box-dot e avanzamento foto */
 .box-dot {
     background-color: rgba(0, 0, 0, .5);
     border-radius: 24px;
@@ -42,6 +43,7 @@ header h1 {
     transform: translate(-50%);
     bottom: 24px;
     left: 50%;
+    display: none;
 }
 
 .box-dot i {
@@ -55,4 +57,8 @@ header h1 {
 
 .box-dot .detected {
     color: #488ac7;
+}
+
+.slider-photo-box:hover .box-dot {
+    display: block;
 }
