--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* intestazione pagina */
 header {
     background-color: #488ac7;
     height: 80px;
@@ -10,6 +11,7 @@ header h1 {
     font-family: 'Poppins', sans-serif;
 }
 
+/* contenitore foto */
 .slider-photo {
     position: relative;
     background-color: #333;
@@ -27,10 +29,22 @@ header h1 {
     width: 100%;
     height: 100%;
     object-fit: contain;
-
 }
 
+/* freccie per cambiare foto */
 .arrow-box i {
+    font-size: 20px;
+    position: relative;
+    transition: all 1s ease-in-out;
+}
+
+.arrow-box.text-end:hover i {
+    right: 10px;   
+    font-size: 40px;
+}
+
+.arrow-box.text-start:hover i {
+    left: 10px;   
     font-size: 40px;
 }
 
@@ -48,11 +62,8 @@ header h1 {
 
 .box-dot i {
     color: #fff;
-    margin-right: 10px;
-}
-
-.box-dot i:last-child {
-    margin-right: 0;
+    margin-right: 5px;
+    margin-left: 5px;
 }
 
 .box-dot .detected {
@@ -61,4 +72,17 @@ header h1 {
 
 .slider-photo-box:hover .box-dot {
     display: block;
+}
+
+.separator {
+    width: 3px;
+    height: 28px;
+    background-color: #fff;
+    border-radius: 3px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.box-dot i.no-rotate {
+    color: rgba(255, 255, 255, 0.5);
 }
