--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,12 @@ header h1 {
     border-radius: 12px;
     padding-top: 12px;
     padding-bottom: 12px;
-    margin-top: 8px;
-    margin-bottom: 8px;
+    margin-top: 24px;
+    margin-bottom: 24px;
 }
 
 .slider-photo-inner {
-    height: calc(100vh - 200px);
+    height: calc(100vh - 232px);
 }
 
 .slider-photo-inner img {
@@ -56,7 +56,7 @@ header h1 {
     padding: 12px;
     position: absolute;
     transform: translate(-50%);
-    bottom: 24px;
+    bottom: 48px;
     left: 50%;
     display: none;
 }
@@ -65,6 +65,7 @@ header h1 {
     color: #fff;
     margin-right: 5px;
     margin-left: 5px;
+    font-size: 12px;
 }
 
 .box-dot .detected {
@@ -75,21 +76,29 @@ header h1 {
     display: block;
 }
 
-.separator {
-    width: 3px;
-    height: 28px;
-    background-color: #fff;
-    border-radius: 3px;
-    display: inline-block;
-    vertical-align: middle;
-}
+.box-dot .sync {
+    text-align: right;
+
+} 
 
 .box-dot i.no-rotate {
     color: rgba(255, 255, 255, 0.5);
+}
+
+.box-dot-inner {
+    display: flex;
+    justify-content: space-between;
 }
 
 /* footer anteprima */
 footer {
     height: 80px;
     background-color: #488ac7;
+}
+
+
+
+/* ---------------------------------------- */
+@media all and (min-width: 992px) {
+    
 }
