--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
+.img-contain {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 /* intestazione pagina */
 header {
-    background-color: #488ac7;
+    background-color: #333;
     height: 80px;
     border-bottom-left-radius: 24px;
     border-bottom-right-radius: 24px;
+    border: 5px solid #488ac7;
 }
 
 header h1 {
@@ -24,12 +31,6 @@ header h1 {
 
 .slider-photo-inner {
     height: calc(100vh - 232px);
-}
-
-.slider-photo-inner img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
 }
 
 /* freccie per cambiare foto */
@@ -91,14 +92,62 @@ header h1 {
 }
 
 /* footer anteprima */
-footer {
+
+footer .display {
+    background-color: #333;
     height: 80px;
-    background-color: #488ac7;
+    border-top-left-radius: 24px;
+    border-top-right-radius: 24px;
+    display: none;
+}
+
+footer .preview {
+    height: 100%;
+}
+
+footer .preview-img {
+    height: 58px;
+    background-color: #333;
+    border: 2px solid rgba(255, 255, 255, 0.7);
+    border-radius: 12px;
+    margin-left: 6px;
+    margin-right: 6px;
+}
+
+footer .preview-img:first-child {
+    margin-left: 12px;
+}
+
+footer .preview-img:last-child {
+    margin-right: 12px;
 }
 
 
+footer .preview-img.detected {
+    border: 2px solid #488ac7;
+}
+
+/* sezione full screen */
+section.full-screen {
+    height: 100vh;
+    background-color: #333;
+    border-radius: 12px;
+}
+
 
 /* ---------------------------------------- */
+@media all and (min-width: 768px) {
+    footer .display {
+        display: block;
+    }
+
+    footer .preview-img {
+        height: 42px;
+    }
+}
+
 @media all and (min-width: 992px) {
-    
+    footer .preview-img {
+        height: 58px;
+    }
 }
