--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,28 @@ header h1 {
     font-size: 40px;
 }
 
+/* frecce full screen */
+[class^="arrow-full-"] {
+    color: rgba(255, 255, 255, 0.5);
+    position: absolute;
+    font-size: 34px;
+}
+
+[class^="arrow-full-"]:hover {
+    color: #488ac7;
+}
+
+.arrow-full-left {
+    left: 0;
+    top: 50%;
+}
+
+.arrow-full-right {
+    right: 0;
+    top: 50%;
+    text-align: right;
+}
+
 /* box-dot e avanzamento foto */
 .box-dot {
     background-color: rgba(0, 0, 0, .5);
@@ -129,9 +151,17 @@ footer .preview-img.detected {
 
 /* sezione full screen */
 section.full-screen {
-    height: 100vh;
     background-color: #333;
     border-radius: 12px;
+    position: relative;
+}
+
+section.full-screen .photo-full-screen {
+    height: 100vh;
+}
+
+section.full-screen:hover .box-dot {
+    display: block;
 }
 
 
